--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </header>
 
         <section class="mb-6 p-4 bg-white shadow-md rounded-lg">
-            <h2 class="text-xl font-semibold mb-3 text-gray-700">1. Cargar Archivo</h2>
+            <h2 class="text-xl font-semibold mb-3 text-gray-700">Cargar Archivo</h2>
             <div class="grid md:grid-cols-1 gap-4 items-center"> 
                 <div>
                     <label for="fileInput" class="block text-sm font-medium text-gray-700 mb-1">Seleccionar archivo de ROMs (.txt):</label>
@@ -143,7 +143,7 @@
         </section>
 
         <section class="mb-6 p-4 bg-white shadow-md rounded-lg">
-            <h2 class="text-xl font-semibold mb-3 text-gray-700">2. Configurar Filtros</h2>
+            <h2 class="text-xl font-semibold mb-3 text-gray-700">Configurar Filtros</h2>
             <div class="grid md:grid-cols-3 gap-6">
                 <div>
                     <h3 class="text-lg font-medium mb-2">Tags a Excluir</h3>
@@ -186,12 +186,12 @@
 
         <section class="mb-6 text-center">
             <button id="btnPrevisualizar" class="bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-lg text-lg transition duration-150 ease-in-out">
-                3. Previsualizar Filtro
+                Previsualizar Filtro
             </button>
         </section>
 
         <section id="resultsSection" class="mb-6 p-4 bg-white shadow-md rounded-lg">
-            <h2 class="text-xl font-semibold mb-3 text-gray-700">4. Resultados de Previsualización</h2>
+            <h2 class="text-xl font-semibold mb-3 text-gray-700">Resultados de Previsualización</h2>
             <div class="grid md:grid-cols-3 gap-6 items-start">
                 <div class="md:col-span-1">
                     <h3 id="labelSalvados" class="text-lg font-medium mb-2">ROMs a Salvar (0):</h3>
@@ -218,7 +218,7 @@
         
         <section class="text-center mb-6">
             <button id="btnGenerarFinal" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-6 rounded-lg shadow-lg text-lg transition duration-150 ease-in-out" disabled>
-                5. Generar Archivo Final
+                Generar Archivo Final
             </button>
         </section>
 
